<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="300dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:text="@string/Blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/IPAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/IPField" />

            <EditText
                android:id="@+id/Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/TimeField"
                android:inputType="number" />

            <EditText
                android:id="@+id/Port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/PortField"
                android:inputType="number" />

            <EditText
                android:id="@+id/timeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Timeout"
                android:inputType="number" />

            <EditText
                android:id="@+id/random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Random"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/retransmitt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Retransmit"
                android:inputType="number" />

            <EditText
                android:id="@+id/nStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/NStart"
                android:inputType="number" />

            <EditText
                android:id="@+id/probingRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Probingrate"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/payloadSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Payloadsize"
                android:inputType="number" />

            <Button
                android:id="@+id/Load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="load"
                android:text="@string/LoadFile" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="next"
        android:text="@string/Continue" />

</RelativeLayout>