<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="30sp" />

    <Button
        android:id="@+id/AddFile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt"
        android:layout_marginLeft="45dp"
        android:text="@string/Yes" />

    <Button
        android:id="@+id/Cont"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/AddFile"
        android:layout_alignBottom="@+id/AddFile"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/AddFile"
        android:text="@string/No" />

</RelativeLayout>